# AGV-Task-1-ETH-Zurich

./: README.md
task1/.catkin_tools/profiles/default/: devel_collisions.txt
task1/devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
task1/devel/.private/catkin_tools_prebuild/: .catkin  local_setup.sh
task1/devel/.private/t1/: local_setup.sh
task1/devel/lib/pkgconfig/: catkin_tools_prebuild.pc  t1.pc
task1/devel/lib/t1/: pub_node  sub_node
task1/src/t1/: CMakeLists.txt
task1/src/t1/launch/: t1.launch
task1/src/t1/src/: publisher_node.cpp  subscriber_node.cpp
task2/.catkin_tools/profiles/default/: devel_collisions.txt
task2/devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
task2/devel/.private/catkin_tools_prebuild/: .catkin
task2/devel/.private/dynamixel_sdk/: .catkin  local_setup.sh
task2/devel/.private/dynamixel_sdk_examples/: .catkin  setup.sh
task2/devel/.private/gaussian_noise/: .catkin  setup.sh
task2/devel/.private/turtlebot3/: .catkin  .rosinstall
task2/devel/.private/turtlebot3_bringup/: .catkin  .rosinstall
task2/logs/gaussian_noise/: build.make.001.log.stderr  build.make.003.log.stderr  build.make.004.log.stderr  build.make.005.log.stderr  build.make.006.log.stderr  build.make.008.log.stderr  build.make.009.log.stderr  build.make.010.log.stderr  build.make.011.log.stderr  build.make.016.log.stderr  build.make.020.log.stderr
task2/src/gaussian_noise/: CMakeLists.txt  package.xml
(+300 files in other folders)
